final_test_output_3.txt
PASS src/lib/cache.test.ts
  CacheService
     should set and get values (15 ms)
     should return null for non-existent keys (2 ms)
     should return null for expired keys (2 ms)
     should handle namespaced clearing (2 ms)
     should clear everything when no namespace is provided (2 ms)
     should get or fetch correctly (4 ms)
     should fetch again after expiration in getOrFetch (1 ms)

PASS src/ai/flows/automated-maintenance-response-drafts.test.ts
  Maintenance Response AI Flow
     should generate a response for valid input (12 ms)
     should throw error if AI generation fails (10 ms)

FAIL src/app/actions.test.ts
   Test suite failed to run

    Jest encountered an unexpected token

    Jest failed to parse a file. This happens e.g. when your code or its dependencies use non-standard JavaScript syntax, or when Jest is not configured to support such syntax.

    Out of the box Jest supports Babel, which will be used to transform your files into valid JS based on your Babel configuration.

    By default "node_modules" folder is ignored by transformers.

    Here's what you can do:
      If you are trying to use ECMAScript Modules, see https://jestjs.io/docs/ecmascript-modules for how to enable it.
      If you are trying to use TypeScript, see https://jestjs.io/docs/getting-started#using-typescript
      To have some of your "node_modules" files transformed, you can specify a custom "transformIgnorePatterns" in your config.
      If you need a custom transformation specify a "transform" option in your config.
      If you simply want to mock your non-JS modules (e.g. binary assets) you can stub them out with the "moduleNameMapper" config option.

    You'll find more details and examples of these config options in the docs:
    https://jestjs.io/docs/configuration
    For information about custom transformations, see:
    https://jestjs.io/docs/code-transformation

    Details:

    C:\Users\USER\Music\WEBSITES\studio-1\node_modules\jspdf\dist\jspdf.es.min.js:51
    import t from"@babel/runtime/helpers/typeof";import{zlibSync as e}from"fflate";import n from"@babel/runtime/helpers/slicedToArray";import{decode as r}from"fast-png";var i=function(){return"undefined"!=typeof window?window:"undefined"!=typeof global?global:"undefined"!=typeof self?self:this}();function a(){i.console&&"function"==typeof i.console.log&&i.console.log.apply(i.console,arguments)}var o={log:a,warn:function(t){i.console&&("function"==typeof i.console.warn?i.console.warn.apply(i.console,arguments):a.call(null,arguments))},error:function(t){i.console&&("function"==typeof i.console.error?i.console.error.apply(i.console,arguments):a(t))}};function s(t,e,n){var r=new XMLHttpRequest;r.open("GET",t),r.responseType="blob",r.onload=function(){l(r.response,e,n)},r.onerror=function(){o.error("could not download file")},r.send()}function u(t){var e=new XMLHttpRequest;e.open("HEAD",t,!1);try{e.send()}catch(n){}return e.status>=200&&e.status<=299}function c(t){try{t.dispatchEvent(new MouseEvent("click"))}catch(n){var e=document.createEvent("MouseEvents");e.initMouseEvent("click",!0,!0,window,0,0,0,80,20,!1,!1,!1,!1,0,null),t.dispatchEvent(e)}}var l=i.saveAs||("object"!==("undefined"==typeof window?"undefined":t(window))||window!==i?function(){}:"undefined"!=typeof HTMLAnchorElement&&"download"in HTMLAnchorElement.prototype?function(t,e,n){var r=i.URL||i.webkitURL,a=document.createElement("a");e=e||t.name||"download",a.download=e,a.rel="noopener","string"==typeof t?(a.href=t,a.origin!==location.origin?u(a.href)?s(t,e,n):c(a,a.target="_blank"):c(a)):(a.href=r.createObjectURL(t),setTimeout(function(){r.revokeObjectURL(a.href)},4e4),setTimeout(function(){c(a)},0))}:"msSaveOrOpenBlob"in navigator?function(e,n,r){if(n=n||e.name||"download","string"==typeof e)if(u(e))s(e,n,r);else{var i=document.createElement("a");i.href=e,i.target="_blank",setTimeout(function(){c(i)})}else navigator.msSaveOrOpenBlob(function(e,n){return void 0===n?n={autoBom:!1}:"object"!==t(n)&&(o.warn("Deprecated: Expected third argument to be a object"),n={autoBom:!n}),n.autoBom&&/^\s*(?:text\/\S*|application\/xml|\S*\/\S*\+xml)\s*;.*charset\s*=\s*utf-8/i.test(e.type)?new Blob([String.fromCharCode(65279),e],{type:e.type}):e}(e,r),n)}:function(e,n,r,a){if((a=a||open("","_blank"))&&(a.document.title=a.document.body.innerText="downloading..."),"string"==typeof e)return s(e,n,r);var o="application/octet-stream"===e.type,u=/constructor/i.test(i.HTMLElement)||i.safari,c=/CriOS\/[\d]+/.test(navigator.userAgent);if((c||o&&u)&&"object"===("undefined"==typeof FileReader?"undefined":t(FileReader))){var l=new FileReader;l.onloadend=function(){var t=l.result;t=c?t:t.replace(/^data:[^;]*;/,"data:attachment/file;"),a?a.location.href=t:location=t,a=null},l.readAsDataURL(e)}else{var h=i.URL||i.webkitURL,f=h.createObjectURL(e);a?a.location=f:location.href=f,a=null,setTimeout(function(){h.revokeObjectURL(f)},4e4)}});
    ^^^^^^

    SyntaxError: Cannot use import statement outside a module

      32 | // Helper for currency formatting
      33 | const formatCurrency = (amount: number) => `KSh ${(amount || 0).toLocaleString()}`;
    > 34 |
         | ^
      35 | export const generateDocumentPDF = (document: FinancialDocument) => {
      36 |     const doc = new jsPDF();
      37 |

      at Runtime.createScriptFromCode (node_modules/jest-runtime/build/index.js:1505:14)
      at Object.<anonymous> (src/lib/pdf-generator.ts:34:55)
      at Object.<anonymous> (src/app/actions.ts:31:23)
      at Object.<anonymous> (src/app/actions.test.ts:10:18)

Test Suites: 1 failed, 2 passed, 3 total
Tests:       9 passed, 9 total
Snapshots:   0 total
Time:        7.943 s
Ran all test suites matching /src\\lib\\cache.test.ts|src\\app\\actions.test.ts|src\\ai\\flows\\automated-maintenance-response-drafts.test.ts/i.
